--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js",
     "build": "tsc",
     "dev": "cross-env NODE_ENV=development nodemon --watch 'src/**' --exec 'ts-node' src/index.ts --e 'ts,js,json'",
     "start:production": "cross-env NODE_ENV=production nodemon ./src/index.ts"
