--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mailgun.js": "^8.2.1",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
-    "multer": "1.4.5-lts.1"
+    "multer": "1.4.5-lts.1",
+    "swagger-ui-dist": "^4.18.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
