--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "build": "tsc",
+    "build": "tsc && npm run copy-public",
+    "copy-public": "ncp src/public dist/public",
     "dev": "cross-env NODE_ENV=development nodemon --watch 'src/**' --exec 'ts-node' src/index.ts --e 'ts,js,json'",
     "start:production": "cross-env NODE_ENV=production nodemon ./src/index.ts"
   },
@@ -35,6 +36,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.15.11",
+    "ncp": "^2.0.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
